fix: align inputs and buttons

--- a/src/dataLoaders/components/DataLoadersOverlay.scss
+++ b/src/dataLoaders/components/DataLoadersOverlay.scss
@@ -36,7 +36,7 @@
   }
 }
 
-.plugin-create-configuration--options {
+.plugin-create-configuration {
   height: 100%;
 }
 
